--- a/python/samples/htmlr/html.html
+++ b/python/samples/htmlr/html.html
@@ -31,6 +31,7 @@
           <li class="content">Content 3 2 3 = 5 "abc"</li>
 	  <p>oooooooooooooooooooooooooooooo</p>
 	  <p>"aaaaaaaaaaaaa<>"</p>
+	  <img src="aaa.png"/>
       </ul>
     </div>
   </body>
